--- a/CNN/CNN_by_chainer.ipynb
+++ b/CNN/CNN_by_chainer.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -24,14 +24,16 @@
    "source": [
     "import chainer\n",
     "from chainer import functions as F\n",
-    "from chainer import links as L"
+    "from chainer import links as L\n",
+    "from chainer import optimizers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -229,7 +231,7 @@
        "[5 rows x 194 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,6 +242,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# データの読み込み"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -247,8 +256,55 @@
    },
    "outputs": [],
    "source": [
-    "df"
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import glob\n",
+    "import random"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ネットワークの定義"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# CNNの定義\n",
+    "class CNN(chainer.Chain):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        with self.init_scope():\n",
+    "            self.conv1 = L.Convolution2D(in_channels=3, out_channels=64, ksize=4, stride=1, pad=2)\n",
+    "            self.conv2 = L.Convolution2D(in_channels=64, out_channels=128, ksize=4, stride=1, pad=2)\n",
+    "            self.conv3 = L.Convolution2D(in_channels=None, out_channels=128, ksize=4, stride=1, pad=2) # in_channelをNoneで省略\n",
+    "            self.fc4 = L.Linear(None, 512)\n",
+    "            self.fc5 = L.Linear(None, 5) # out_channelはクラス数と同じ5に設定\n",
+    "        \n",
+    "        \n",
+    "    def __call__(self, X):\n",
+    "        h = F.relu(F.max_pooling_2d(self.conv1(X), ksize=2)) # conv1の畳み込みのあとにMaxPoolingを実行\n",
+    "        h = F.relu(F.max_pooling_2d(self.conv2(h), ksize=2)) # conv2の畳み込みのあとにMaxPpoolingを実行\n",
+    "        h = F.relu(F.max_pooling_2d(self.conv3(h), ksize=2)) # conv3の畳み込みのあとにMaxPoolingを実行\n",
+    "        h = F.relu(self.fc4(h))\n",
+    "        return self.fc5(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
