--- a/TreeModels.ipynb
+++ b/TreeModels.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -608,19 +608,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# データの標準化\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X)\n",
+    "X_std = scaler.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from sklearn.cross_validation import train_test_split\n",
-    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.3,random_state=10)"
+    "X_train,X_test,y_train,y_test=train_test_split(X_std,y,test_size=0.3,random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -637,7 +652,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -658,10 +673,10 @@
     {
      "data": {
       "text/plain": [
-       "0.39057239057239057"
+       "0.53872053872053871"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -690,7 +705,7 @@
        "              warm_start=False)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -711,10 +726,10 @@
     {
      "data": {
       "text/plain": [
-       "0.4713804713804714"
+       "0.56228956228956228"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,27 +740,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zukako/.pyenv/versions/anaconda3-4.0.0/envs/py35/lib/python3.5/site-packages/sklearn/base.py:175: DeprecationWarning: inspect.getargspec() is deprecated, use inspect.signature() instead\n",
-      "  args, varargs, kw, default = inspect.getargspec(init)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+       "       max_depth=3, min_child_weight=1, missing=None, n_estimators=100,\n",
+       "       n_jobs=1, nthread=None, objective='multi:softprob', random_state=0,\n",
+       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "       silent=True, subsample=1)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -756,18 +769,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.81818181818181823"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "reg.score(X_test,y_test)"
+    "classifier.score(X_test,y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -781,7 +805,7 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -802,10 +826,10 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.95959595959595956"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
